Add NftService and NftServiceTest